--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".CreateAccountNextPage" />
-        <activity android:name=".CreateAccount" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.auth.LoginActivity"></activity>
+        <activity android:name=".ui.auth.CreateAccountNextPage" />
+        <activity android:name=".ui.auth.CreateAccount" />
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
